--- a/deploy/routing/30_worker.deployment.yaml
+++ b/deploy/routing/30_worker.deployment.yaml
@@ -20,3 +20,8 @@ spec:
         ports:
         - containerPort: 8000
         args: ["worker:app"]
+        env:
+        - name: POD_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
