Change Docker registry to Google's one

--- a/deploy/routing/40_worker.deployment.yaml
+++ b/deploy/routing/40_worker.deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: worker
     spec:
       containers:
-      - image: routing:dev
+      - image: europe-central2-docker.pkg.dev/irio-2425-routing/irio-routing/routing
         name: worker
         ports:
         - containerPort: 8000
