--- a/deploy/routing/30_manager.deployment.yaml
+++ b/deploy/routing/30_manager.deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: manager
     spec:
       containers:
-      - image: routing:dev
+      - image: europe-central2-docker.pkg.dev/irio-2425-routing/irio-routing/routing
         name: manager
         ports:
         - containerPort: 8000
