--- a/deploy/routing/50_main.deployment.yaml
+++ b/deploy/routing/50_main.deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: main
     spec:
       containers:
-      - image: routing:dev
+      - image: europe-central2-docker.pkg.dev/irio-2425-routing/irio-routing/routing
         name: main
         ports:
         - containerPort: 8000
